--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,16 @@
 * {
     box-sizing: border-box;
     margin:0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Sulphur Point', sans-serif;
 
 }
 
 body {
-    background-color: rgb(30, 0, 79);
-    overflow: hidden;    
+    background-color: rgb(30, 0, 79);   
+}
+
+.first_page{
+    overflow: hidden; 
 }
 
 .contain-vignets {
@@ -49,7 +52,6 @@ body {
 
 
 .vignet-left p {
-    font-family: 'Yeon Sung', cursive;
     padding-left: 2%;
     padding-top: 4%;
     color: white;
@@ -77,7 +79,6 @@ body {
 }
 
 .vignet-centerL p {
-    font-family: 'Rock Salt', cursive;
     padding-left: 60%;
     padding-top: 4%;
     color: white;
@@ -104,7 +105,6 @@ body {
 }
 
 .vignet-centerR p {
-    font-family: 'Turret Road', cursive;
     padding-left: 10%;
     padding-top: 4%;
     color: white;
@@ -129,7 +129,6 @@ body {
 }
 
 .vignet-right p {
-    font-family: 'Cinzel', serif;
     padding-left: 20%;
     padding-top: 10%;
     color: white;
@@ -138,11 +137,71 @@ body {
 }
 
 /* ##################################### 
+Footer
+################################################ */
+.foot-container {
+    background-color: #B896CC;
+    clip-path: polygon(0 34%, 100% 0, 100% 100%, 0% 100%);
+    margin-top: 3%;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 6%;
+    margin-top:3%;
+    height:10%;
+}
+
+.vignet-foot-container {
+    width:100%;
+    display: flex;
+    padding-right: 5%;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+}
+
+.RS {
+    font-size: 3rem;
+}
+.foot-left{
+    text-decoration: none;
+    width:40%;
+
+}
+
+.mentionlegal {
+    display:flex;
+    flex-flow:column nowrap;
+    align-items: center;
+}
+
+.MentLeg{
+    flex-grow: 1;
+    font-size: 1.5rem;
+    font-weight: 700;
+
+}
+
+.vignet-foot-container ul li {
+    display:block;
+
+}
+
+
+.vignet-foot-container ul li a {
+    text-decoration: none;
+}
+
+
+/* ##################################### 
 MEDIA QUERIES 
 ################################################ */
 
 @media screen and (min-width: 767px){
-    body {
+    .first_page {
         overflow: hidden;
     }
 
@@ -312,6 +371,7 @@ MEDIA QUERIES
 */
 .contain-vignets-2 {
     position: relative;
+    display:block;
     overflow: hidden;
     clip-path: polygon(0 0, 100% 0, 100% 79%, 0% 100%);
     height:20vh;
@@ -336,7 +396,6 @@ MEDIA QUERIES
 }
 
 .comics-text {
-    font-family: 'Rock Salt', cursive;
     color: white;
     font-size: 1.3rem;
     max-width: inherit;
@@ -364,7 +423,6 @@ MEDIA QUERIES
 }
 
 .video-games-text{
-    font-family: 'Turret Road', cursive;
     color: white;
     font-size: 2rem;
     max-width: inherit;
@@ -393,8 +451,46 @@ MEDIA QUERIES
 
 .movies-text {
     padding-left:15%;
-    font-family: 'Cinzel', serif;
     color: white;
     font-size: 1.5rem;
     max-width: inherit;
+}
+
+.main_cont {
+    padding: 3%;
+}
+
+.article_top{
+    background-color: #594BA7;
+    clip-path: polygon(0 16%, 100% 0, 100% 100%, 0 80%);
+    padding: 5%;
+    padding-left:0%;
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.article_mid{
+    background-color:#D4BADC;
+    clip-path: polygon(0 0, 100% 17%, 100% 89%, 0 100%);
+    padding: 5%;
+}
+
+.article_bot{
+    background-color:#392E98;
+    clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 89%);
+    padding: 5%;
+}
+
+.article_text {
+    flex-grow: 1;
+    text-align: end;
+    font-size: 0.9rem;
+    padding: 3%;
+    color:white;
+}
+
+.miniature{
+    clip-path: polygon(0 0, 46% 0, 100% 100%, 0% 100%);
+    background-color: burlywood;
+    width:800px;
 }
